Fix spacing issue in assignments-submain-heading margin-top

--- a/app/assets/stylesheets/assignments.scss
+++ b/app/assets/stylesheets/assignments.scss
@@ -1,6 +1,6 @@
 //newassignment-editassignment
 .assignments-submain-heading {
-  margin-top: 0;
+  margin-top: 20px;
 }
 
 .assignments-noedit-grade-field {
